--- a/HalloWinUI/Views/MaisonsPage.xaml
+++ b/HalloWinUI/Views/MaisonsPage.xaml
@@ -16,8 +16,10 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <StackPanel Spacing="12">
-            <Button>
+        <StackPanel 
+            Spacing="12" 
+            Grid.Row="0">
+            <Button Click="BtnAjouter_Click">
                 <StackPanel Orientation="Horizontal" Spacing="8">
                     <FontIcon Glyph="&#xE710;" />
                     <TextBlock VerticalAlignment="Center" Text="Ajouter" />
@@ -56,7 +58,7 @@
                                     FontWeight="SemiBold"
                                     Foreground="{x:Bind StatutCouleur, Mode=OneWay}"
                                     Text="{x:Bind StatutTexte, Mode=OneWay}" />
-                                <CheckBox Content="Signaler" IsChecked="{x:Bind EstSignalee}" />
+                                <CheckBox Content="Signaler" IsChecked="{x:Bind EstSignalee, Mode=TwoWay}" />
                             </StackPanel>
                         </StackPanel>
 
