--- a/HalloWinUI/Views/MaisonsPage.xaml
+++ b/HalloWinUI/Views/MaisonsPage.xaml
@@ -19,6 +19,7 @@
         <StackPanel 
             Spacing="12" 
             Grid.Row="0">
+            <TextBox x:Name="nouvelleMaisonTextBox"  PlaceholderText="Entrez l'adresse..." />
             <Button Click="BtnAjouter_Click">
                 <StackPanel Orientation="Horizontal" Spacing="8">
                     <FontIcon Glyph="&#xE710;" />
