--- a/HalloWinUI/Views/MaisonsPage.xaml
+++ b/HalloWinUI/Views/MaisonsPage.xaml
@@ -16,10 +16,13 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <StackPanel 
-            Spacing="12" 
-            Grid.Row="0">
-            <TextBox x:Name="nouvelleMaisonTextBox"  PlaceholderText="Entrez l'adresse..." />
+        <StackPanel Grid.Row="0" Spacing="12">
+            <!--
+                TODO:
+                - Binding avec NouvelleMaison manquant
+                - Pas besoin de x:Name avec le binding
+            -->
+            <TextBox x:Name="nouvelleMaisonTextBox" PlaceholderText="Entrez l'adresse..." />
             <Button Click="BtnAjouter_Click">
                 <StackPanel Orientation="Horizontal" Spacing="8">
                     <FontIcon Glyph="&#xE710;" />
